--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,19 @@
-streamlit
-langchain
-langchain_community
-langchain_openai
-faiss-cpu
-python-dotenv
-gdown
-openai
-pickle5
+pip~=25.0.1
+attrs~=25.1.0
+distro~=1.9.0
+wheel~=0.41.2
+PySocks~=1.7.1
+protobuf~=5.29.3
+pillow~=11.1.0
+tornado~=6.4.2
+Jinja2~=3.1.5
+setuptools~=68.2.0
+packaging~=23.2
+typing_extensions~=4.12.2
+streamlit~=1.42.0
+gdown~=5.2.0
+langchain~=0.3.18
+langchain-community~=0.3.17
+langchain-openai~=0.3.5
+python-dotenv~=1.0.1
+langchain-text-splitters~=0.3.6
